--- a/css/layout.css
+++ b/css/layout.css
@@ -134,7 +134,7 @@
   & img {
     object-fit: cover;
     border-radius: 0.5em;
-    /* aspect-ratio: 16 / 9; */
+    aspect-ratio: 16 / 9;
   }
 }
 
